# VOC_mux

./: CMakeLists.txt  VOC_mux_flowchart.drawio  main.c
libraries/: VOC_essentials.c  VOC_essentials.h  sht3x_i2c.c  sht3x_i2c.h
